--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
             "dev-master": "0.1.x-dev"
         },
         "flarum-extension": {
-            "title": "English",
+            "title": "Vietnamese",
             "icon": {
                 "image": "icon.svg",
                 "backgroundColor": "#00247d",
